<resources>
    <string name="app_name">Tripsters SDK Sample</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">释放更新</string>
    <string name="doing_update">正在刷新...</string>
    <string name="loadinfo">加载中...</string>
    <string name="login_now">登录中...</string>
    <string name="sharing">分享中...</string>
    <string name="searching">搜索中...</string>
    <string name="handling">处理中...</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="done">完成</string>
    <string name="save">保存</string>
    <string name="filter">筛选</string>
    <string name="publish">提交</string>
    <string name="preview">预览</string>
    <string name="jump">跳过</string>
    <string name="load_more">加载更多</string>
    <string name="no_more">没有更多啦~</string>
    <string name="update_time">最后刷新时间</string>
    <string name="hour_label">小时前</string>
    <string name="hour_label_plural">小时前</string>
    <string name="minute_label">分钟前</string>
    <string name="minute_label_plural">分钟前</string>
    <string name="day_label_plural">天前</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="titlebar_login">登录</string>
    <string name="titlebar_register">注册</string>
    <string name="titlebar_selected_country">选择目的地</string>
    <string name="titlebar_filtered_city">选择城市</string>
    <string name="titlebar_send_question">我要提问</string>
    <string name="titlebar_add_tags">至多选择3个标签</string>
    <string name="titlebar_asking_help">寻找达人</string>
    <string name="titlebar_selected_city">至多选择%s个城市</string>
    <string name="titlebar_send_answer">我来回答</string>
    <string name="titlebar_send_reanswer">我来回复</string>
    <string name="titlebar_question_detail">问答详情</string>
    <string name="titlebar_attentions">关注</string>
    <string name="titlebar_followers">粉丝</string>
    <string name="titlebar_received_answers">收到的解答</string>
    <string name="titlebar_received_questions">收到的求助</string>
    <string name="titlebar_received_comments">收到的评论</string>
    <string name="titlebar_system_messages">系统消息</string>
    <string name="titlebar_groups">群聊</string>
    <string name="titlebar_new_group">新建群组</string>
    <string name="titlebar_points">积分规则</string>
    <string name="titlebar_gold">金币规则</string>
    <string name="titlebar_daren">申请达人</string>
    <string name="titlebar_setting">设置</string>
    <string name="titlebar_about">关于我们</string>
    <string name="titlebar_qrcode">二维码</string>
    <string name="titlebar_feedback">我要吐槽</string>
    <string name="titlebar_recording_video">录制视频</string>
    <string name="titlebar_rush_order">翻译请求</string>
    <string name="titlebar_recharge">积分</string>
    <string name="titlebar_profile_edit">编辑个人资料</string>
    <string name="titlebar_gallery">图片</string>
    <string name="titlebar_send_blog">我要推荐</string>
    <string name="titlebar_blog_detail">推荐详情</string>
    <string name="titlebar_fav">赞</string>
    <string name="titlebar_comment">评论</string>
    <string name="titlebar_my_profile">我的资料</string>
    <string name="titlebar_my_trips">我的行程</string>
    <string name="titlebar_my_questions">我的提问</string>
    <string name="titlebar_my_answers">我的回答</string>
    <string name="titlebar_my_blogs">我的推荐</string>
    <string name="titlebar_my_comments">我的评论</string>
    <string name="titlebar_my_reserves">我的预订</string>
    <string name="titlebar_my_favs">我的收藏</string>
    <string name="titlebar_my_groups">我的群组</string>
    <string name="titlebar_other_profile">ta的资料</string>
    <string name="titlebar_other_trips">ta的行程</string>
    <string name="titlebar_other_questions">ta的提问</string>
    <string name="titlebar_other_answers">ta的回答</string>
    <string name="titlebar_other_blogs">ta的推荐</string>
    <string name="titlebar_other_comments">ta的评论</string>
    <string name="titlebar_drafts">草稿箱</string>
    <string name="titlebar_rush_groupon">抢优惠</string>
    <string name="titlebar_add_group">去结伴</string>
    <string name="titlebar_add_trip">添加行程</string>
    <string name="titlebar_select_trip">选择行程</string>
    <string name="titlebar_group_members">群成员</string>
    <string name="titlebar_group_setting">群设置</string>
    <string name="empty_default">数据跑到外太空啦～</string>
    <string name="empty_question_detail">勇争第一答人！</string>
    <string name="empty_trips">暂无行程</string>
    <string name="empty_questions">暂无提问</string>
    <string name="empty_answers">暂无回答</string>
    <string name="empty_blogs">暂无推荐</string>
    <string name="empty_comments">暂无评论</string>
    <string name="empty_groupons">暂无优惠</string>
    <string name="empty_fav_questions">暂无收藏问题</string>
    <string name="empty_fav_blogs">暂无收藏推荐</string>
    <string name="empty_groups">暂无群组</string>
    <string name="empty_pois">暂无热点</string>
    <string name="empty_friends">暂无关注</string>
    <string name="empty_fans">暂无粉丝</string>
    <string name="empty_fav_users">暂无赞用户</string>
    <string name="empty_group_members">暂无群成员</string>
    <string name="empty_system_messages">暂无系统消息</string>
    <string name="empty_drafts">暂无草稿</string>
    <string name="empty_search">暂无搜索结果</string>
    <string name="login_with_weibo">微博登录</string>
    <string name="login_with_weixin">微信登录</string>
    <string name="login_with_qq">QQ登录</string>
    <string name="main_tab_question">问答</string>
    <string name="main_tab_bloglist">推荐</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_proflie">我的</string>
    <string name="back_again">再按一次退出趣皮士</string>
    <string name="settings_account_title">趣皮士帐号</string>
    <string name="settings_account_logout">未登录</string>
    <string name="settings_version_title">当前版本(v%s)</string>
    <string name="settings_version_update">点击更新</string>
    <string name="settings_share_title">爱心分享</string>
    <string name="settings_prompt_latest_version">您当前已经是最新版本</string>
    <string name="settings_prompt_latest_version_error">请求超时，请稍后更新</string>
    <string name="share_app_title">旅行神器趣皮士</string>
    <string name="share_app_text">我发现了一款出境游问答神器，有问必答！还能勾搭本地人深度游，超好用！</string>
    <string name="about_title">出境游问答神器</string>
    <string name="about_description1">趣皮士，出国旅行，异国他乡，本地人在线，有问必答！</string>
    <string name="about_description2">趣皮士汇聚了数千位热心的当地华人，随时在线帮你解答任何旅行问题，分享最好玩、最地道、最省钱的资讯和推荐。无论是旅行前的攻略，还是旅行中的纠结，你只负责张口就问，我们负责有问必答。</string>
    <string name="about_qrcode_weixin">微信公共账号</string>
    <string name="about_qrcode_weibo">官方微博账号</string>
    <string name="about_contact">联系我们 : contact@tripsters.cn</string>
    <string name="about_copyright">COPYRIGHT © 2014-2015 TRIPSTERS, INC.</string>
    <string name="share_sns">新浪微博</string>
    <string name="share_tx_weixin_friend">微信朋友圈</string>
    <string name="share_tx_weixin">微信</string>
    <string name="share_tx_qq">腾讯QQ</string>
    <string name="share_tx_qq_zone">QQ空间</string>
    <string name="share_mail">邮件</string>
    <string name="share_qrcode">二维码</string>
    <string name="ipaddr_set">显示所在国家</string>
    <string name="receive_help_set">接收求助通知</string>
    <string name="receive_new_message_set">接收聊天通知</string>
    <string name="voice_new_message_set">声音</string>
    <string name="move_new_message_set">震动</string>
    <string name="bigvoice_new_message_set">使用扬声器播放语音</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="take_photo_error">操作失败，请检查相机是否可用。</string>
    <string name="take_photo_sd_error">SD卡不可用，无法使用拍照功能。</string>
    <string name="sign_out">退出登录</string>
    <string name="requestion">回复</string>
    <string name="install_weixin">请安装微信客户端</string>
    <string name="connect_us_weibo">微博:@趣皮士Tripsters </string>
    <string name="connect_us_weixin">微信公众账号:趣皮士 </string>
    <string name="qrcode_share">扫一扫二维码，加入趣皮士</string>
    <string name="send_question_add_tags">添加标签</string>
    <string name="send_question_add_cities">添加城市</string>
    <string name="send_question_result_success">发送成功，正在为你寻找答案</string>
    <string name="send_question_result_waiting">本地人会优先通知，请耐心等待~</string>
    <string name="send_question_result_people">本地达人已通知</string>
    <string name="send_question_result_lookaround">去其他地方逛逛</string>
    <string name="send_question_result_question">看看大家都在问什么</string>
    <string name="send_question_result_answer">去帮别人回答问题</string>
    <string name="group_chat">群聊</string>
    <string name="notify_apply">申请与通知</string>
    <string name="invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="exit_group">退出</string>
    <string name="message_login_again">连接不到聊天服务器,请尝试退出重新登录</string>
    <string name="message_network_error">当前网络不可用，请检查网络设置</string>
    <string name="message_no_login">还未登录，请先登录</string>
    <string name="pre_login_str">请先登录，再发送，谢谢！</string>
    <string name="pre_save_str">请先登录，再收藏，谢谢！</string>
    <string name="pre_zan_str">请先登录，再点赞，谢谢！</string>
    <string name="pre_message_str">请先登录，再私信，谢谢！</string>
    <string name="pre_attaction_str">请先登录，再关注，谢谢！</string>
    <string name="pre_reserve_str">请先登录，再预订，谢谢！</string>
    <string name="pre_translation_str">请先登录，再翻译，谢谢！</string>
    <string name="pre_assistant_str">请先登录，再咨询顾问，谢谢！</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="down_line">下线通知</string>
    <string name="no_more_str">没有更多了</string>
    <string name="want_to_daren">我要成为达人</string>
    <string name="indexbar_opened">开通</string>
    <string name="index_city_opened">开通达人在线</string>
    <string name="lv_notify_message">趣皮士提醒:</string>
    <string name="good_friend">好友</string>
    <string name="good_friend_send">发来了一条消息哦</string>
    <string name="how_good_friend_send">个好友，发来了</string>
    <string name="how_good_friend_send_message">条消息</string>
    <string name="title_hot">常见</string>
    <string name="title_newest">最新</string>
    <string name="title_chosen">精选</string>
    <string name="title_all">全部</string>
    <string name="title_app">应用</string>
    <string name="input_length_last">%1$s/%2$s</string>
    <string name="question_title_input_empty">请输入问题的内容</string>
    <string name="question_title_input_invalid">问题标题格式不正确:长度不能超过%s个字</string>
    <string name="answer_title_input_empty">请输入回答的内容</string>
    <string name="add_cities">添加城市</string>
    <string name="add_cities_num">添加城市（%s）</string>
    <string name="add_tags">添加标签</string>
    <string name="add_tags_num">添加标签（%s）</string>
    <string name="question_tag_select_empty">您需要选择至少一个技能类型</string>
    <string name="question_city_select_empty">您需要选择至少一个城市</string>
    <string name="question_item_answer_num">回答 %s</string>
    <string name="question_item_favorite_num">收藏 %s</string>
    <string name="questiondetail_item_question">回复</string>
    <string name="questiondetail_item_like">赞</string>
    <string name="answer_me_str">回复我:</string>
    <string name="questiondetail_answer">我来回答</string>
    <string name="profile_favorites">收藏</string>
    <string name="slash">/</string>
    <string name="login_appuid_hint">第三方用户唯一ID（必填）</string>
    <string name="login_nickname_hint">第三方用户昵称（必填）</string>
    <string name="login_avatar_hint">第三方用户头像（必填）</string>
    <string name="login_gender_hint">第三方用户性别（必填）</string>
    <string name="login_location_hint">第三方用户所在地（可选）</string>
    <string name="profile_edit_basic">基本信息</string>
    <string name="profile_edit_name">昵称</string>
    <string name="profile_edit_gender">性别</string>
    <string name="profile_edit_address">常住地</string>
    <string name="profile_edit_nation">国籍</string>
    <string name="profile_edit_occupation">职业</string>
    <string name="profile_edit_intro">简介</string>
    <string name="profile_edit_trip">行程</string>
    <string name="profile_edit_trip_hint">写行程，偶遇和你志趣相投的人，\n例如：2015.05~2015.06 去火星</string>
</resources>