<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tb_bg_white">

    <com.tripsters.sample.view.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@drawable/bg_title" />

    <LinearLayout
        android:id="@+id/lt_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/titlebar"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_appuid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/tb_margin"
            android:layout_marginRight="@dimen/tb_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_appuid_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/tb_dark_grey"
            android:textColorHint="@color/tb_light_grey"
            android:textSize="@dimen/text_large_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/tb_divider_height"
            android:background="@drawable/bg_divider" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/tb_margin"
            android:layout_marginRight="@dimen/tb_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_nickname_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/tb_dark_grey"
            android:textColorHint="@color/tb_light_grey"
            android:textSize="@dimen/text_large_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/tb_divider_height"
            android:background="@drawable/bg_divider" />

        <EditText
            android:id="@+id/et_avatar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/tb_margin"
            android:layout_marginRight="@dimen/tb_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_avatar_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/tb_dark_grey"
            android:textColorHint="@color/tb_light_grey"
            android:textSize="@dimen/text_large_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/tb_divider_height"
            android:background="@drawable/bg_divider" />

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/tb_margin"
            android:layout_marginRight="@dimen/tb_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_gender_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/tb_dark_grey"
            android:textColorHint="@color/tb_light_grey"
            android:textSize="@dimen/text_large_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/tb_divider_height"
            android:background="@drawable/bg_divider" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/tb_margin"
            android:layout_marginRight="@dimen/tb_margin"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_location_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/tb_dark_grey"
            android:textColorHint="@color/tb_light_grey"
            android:textSize="@dimen/text_large_size" />
    </LinearLayout>

</RelativeLayout>